Refactorized ICommandLinux for ffmpegWrapper